fixed vertical and horizantle scrollbar

--- a/src/components/App.css
+++ b/src/components/App.css
@@ -16,9 +16,9 @@
 
 .App-main__container::part(container) {
   height: 100%;
-  width: 100%;
   display: flex;
   flex-direction: column;
+  position: relative;
 }
 
 .App-main__container::part(body) {
@@ -31,7 +31,6 @@
 .App-main__left-panel {
   width: 100%;
   transition: width 0.2s linear;
-  margin-bottom: 1rem;
 }
 
 .App-main__left-panel.isOpen {
