--- a/src/components/ContactsList/ContactsList.css
+++ b/src/components/ContactsList/ContactsList.css
@@ -1,4 +1,4 @@
 .Contacts-list {
-  height: calc(100% - 5.25rem);
+  height: calc(100vh - 21.5rem);
   overflow: auto;
 }
