--- a/src/components/ContactsTimeline/ContactsTimeline.css
+++ b/src/components/ContactsTimeline/ContactsTimeline.css
@@ -1,6 +1,3 @@
-.Contacts-timeline {
-  border-top: 2px solid var(--color-background-base-default);
-}
 .Contacts-timeline__label {
   display: flex;
   align-items: center;
@@ -27,17 +24,13 @@ rux-time-region::part(container) {
 .timeline-wrapper {
   position: relative;
   overflow: auto;
-  height: 100%;
+  height: calc(100vh - 19rem);
+  border-top: 2px solid var(--color-background-base-default);
 }
 
-.timeline-wrapper rux-track[slot='ruler'] {
-  background-color: red;
-}
-
-rux-timeline.Contacts-timeline::-webkit-scrollbar-track {
-}
-
-.timeline-wrapper::-webkit-scrollbar-track {
+rux-timeline {
+  position: relative;
+  display: flex;
 }
 
 .timeline-wrapper::-webkit-scrollbar:horizontal {
@@ -46,4 +39,5 @@ rux-timeline.Contacts-timeline::-webkit-scrollbar-track {
 }
 
 .timeline-wrapper rux-timeline rux-track::part(container) {
+  width: 100%;
 }
